add a glossary search
