# komtek/terminology/serializers.py
@@ -2,15 +2,21 @@ from rest_framework import serializers
 
 from komtek.terminology.models import Glossary, GlossaryElement
 
+
 class GlossarySerializer(serializers.HyperlinkedModelSerializer):
     class Meta:
         model = Glossary
-        fields = ["name", 'short_name', 'description', 'version', 'initial_date']
+        fields = [
+            "id",
+            "name",
+            "short_name",
+            "description",
+            "version",
+            "start_date",
+        ]
 
 
 class GlossaryElementSerializer(serializers.HyperlinkedModelSerializer):
     class Meta:
         model = GlossaryElement
-        fields = ["prarent_id", 'code', 'value']
-
-
+        fields = ["prarent_id", "code", "value"]
